mule-user-guide/v/3.6/microsoft-dynamics-ax-2012-connector.adoc
=  Microsoft Dynamics AX 2012连接器
:keywords: anypoint studio, esb, connector, endpoint, microsoft, erp, ax query

Microsoft Dynamics AX 2012连接器使Mule应用程序能够与Microsoft Dynamics AX查询服务进行交互。 Microsoft Dynamics AX是一个企业资源计划（ERP）应用程序。

Microsoft Dynamics AX 2012连接器支持以下操作：

[%header%autowidth.spread]
|===
| {操作{1}}说明
| *Query table*  |针对应用程序对象树（AOT）表运行查询。有关更多信息，请参阅Microsoft https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]网站。
| *Static query*  |运行https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。
|===

== 先决条件

安装 link:/mule-user-guide/v/3.6/windows-gateway-services-guide[Windows网关服务]

用于Anypoint平台的===  Windows网关服务

调用Dynamics AX系统服务时，Windows网关服务代理执行协议转换。 Dynamics AX系统服务（元数据服务，查询服务）使用未在Java中实现的`net.tcp`协议。

要执行请求，连接器按照以下方式通过Windows网关服务路由请求：

. 连接器向Windows网关服务发送HTTP请求。
.  Windows网关服务收到HTTP请求。
.  Windows网关服务使用` net.tcp `协议执行针对Dynamics AX系统服务的请求。
.  Windows网关服务接收来自Dynamics AX系统服务的响应。
.  Windows网关服务通过HTTP将响应发送到连接器。
. 连接器接收到响应。

Anypoint Platform和Windows Gateway Services之间的所有通信均通过SSL进行身份验证和保护。

== 安装

在Anypoint Studio中安装Microsoft Dynamics AX 2012连接器：

. 在Anypoint Studio的*Help*菜单下，点击*Install New Software*。
. 从*Work with*下拉，点击`Anypoint Connectors Update Site`。
. 展开*Select*类别，然后点击*Microsoft Dynamics AX 2012 Connector*的复选框。点击*Next*。
. 查看您选择的项目的详细信息，然后点击*Next*。
. 选择*I accept the terms of the license agreement*并点击*Finish*。
. 点击*Restart Now*完成安装。
.  Studio重新启动后，展开*Connectors*调色板组，查看您最近添加的**Microsoft Dynamics AX 2012 Connector**。

== 创建一个新的Mule项目

打开*Anypoint Studio*并创建一个新项目：

. 从菜单中选择*File*> *New*> *Mule Project*。
. 在*New Mule Project*窗口中，输入**ax-demo**作为*Project Name*。
. 点击*Finish*。

== 创建和配置新的Microsoft Dynamics AX全局元素

配置连接器的连接：

. 点击*Global Elements*标签。
. 点击*Create*，弹出*Global Type*对话框。
. 在*Search*文本框中输入*ax*。
. 选择**Microsoft Dynamics AX: Gateway Connection**并点击*OK*。
. 填写所需的参数：
+
[%header,cols="2*"]
|===
| {参数{1}}说明
| *Username*  |连接到Dynamics AX的用户名。
| *Password*  |连接到Dynamics AX的密码。
| *AOS Server Name*  |运行*Application Object Server*的服务器的名称或IP。
| *Gateway Router Service Address*  | *Windows Gateway Services*的地址（主机和端口）。该地址通常与`+https://myserver.com:9333/router+`类似。
|===
. 点击*Test Connection*以确保连接正常工作。
. 连接成功后，点击*OK*。

== 创建一个查询Dynamics AX的流程

创建一个Mule流来查询"ProjTable"。要创建Mule流，请按照下列步骤操作：

. 点击*Message Flow*标签。
. 搜索*http*并将*HTTP*连接器拖动到画布上。这创建了一个新的流程。
. 搜索*ax*，然后将*HTTP*连接器旁边的**Microsoft Dynamics AX 2012**连接器拖动到*Process*区域。
. 搜索*json*，然后将*Object to JSON*变压器拖到**Microsoft Dynamics AX 2012**旁边。
. 双击*HTTP*连接器。点击*Connector Configuration*列表旁边的加号（**+**）。
. 在*HTTP Listener Configuration*窗口中，确保*Protocol*设置为*HTTP*，*Host*设置为**All Interfaces [0.0.0.0] (Default)**，*Port*为设为**8081**。点击*OK*。
. 在*Basic Settings*下，将*Path*设置为**/query**。
. 双击**Microsoft Dynamics AX 2012**并更新以下配置值：
.. 从*Connector Configuration*列表中选择先前创建的**Microsoft Dynamics AX 2012  Connector**配置。
.. 从*Operation*列表中选择*Query table*。
.. 从*Language*列表中点击*DataSense Query Language*。
.. 点击**Query Builder…**
.. 从*Types*列表中选择*ProjTable*。
.. 从*Fields*列表中选择*ProjId*和*ProjGroupId*。
.. 从*Order By*列表中选择*ProjId*。
.. 从*Direction*列表中选择*DESCENDING*。


. 点击*OK*。

== 运行流程

. 在*Package Explorer*中，右键单击**demo-ax**，然后选择*Run As*> *Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+
[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'ax-demo'                                    +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.DeploymentDirectoryWatcher:
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Mule is up and kicking (every 5000ms)                     +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.StartupSummaryDeploymentListener:
**********************************************************************
*              - - + DOMAIN + - -               * - - + STATUS + - - *
**********************************************************************
* default                                       * DEPLOYED           *
**********************************************************************

*************************************************************************************
* - - + APPLICATION + - -            *       - - + DOMAIN + - -      * - - + STATUS *
*************************************************************************************
* ax-demo                          * default                       * DEPLOYED       *
*************************************************************************************
----
+
. 打开Internet浏览器并访问`+http://localhost:8081/query+`
. 按降序排列的帐户列表应以JSON格式返回（结果因您的AX实例而异）。
+
[source, code, linenums]
----
[{"ProjId":"DAT-000009","ProjGroupId":"Group-2"},{"ProjId":"DAT-000008","ProjGroupId":"Group-1"},{"ProjId":"DAT-000007","ProjGroupId":"Group-0"}]
----


== 使用连接器的示例

开始演示：

. 在Studio中导入项目文件夹。
. 更新/src/main/app/mule-app.properties中的Microsoft Dynamics AX连接参数。
. 点击*Test Connection*以确保连接正常工作。
. 运行应用程序。

演示包括以下操作：

* 查询*ProjTable*表中的所有项目：
  `+http://localhost:8081/projects+`
* 列出所有项目（静态查询*ProjListProjectTable*）：
  `+http://localhost:8081/list-projects+`
* 通过ProjId获取项目（静态查询*ProjListProjectTable*）：`+http://localhost:8081/list-projects?ProjId={projid}+`

== 操作

* 查询表
+
在 link:https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]上运行查询。
+
* 静态查询
+
运行 link:https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。

=== 输入

下表详细说明了操作的输入参数。

[%header,cols="2*"]
|===
| {参数{1}}说明
| *staticQueryName*  |要执行的静态查询的名称。
| *fetchSize*  |分页结果的页面大小。
| [消息有效载荷]  |对于接受输入参数的静态查询，带有参数名称和值的`Map<String, Object>`。
|===

=== 输出

包含静态查询结果的列表。

== 另请参阅

*  https://www.microsoft.com/en-us/dynamics/erp-ax-overview.aspx [Microsoft动态AX网站]
*  link:/mule-user-guide/v/3.6/windows-gateway-services-guide[Windows网关服务]
