mule-user-guide/v/3.7/microsoft-dynamics-ax-2012-connector.adoc
=  Microsoft Dynamics AX 2012连接器
:keywords: anypoint studio, esb, connector, endpoint, microsoft, erp, ax query

*Select*

*Latest version: 1.2.0*

Microsoft Dynamics AX 2012连接器使Mule应用程序能够与Microsoft Dynamics AX查询服务进行交互。 Microsoft Dynamics AX是一个企业资源计划（ERP）应用程序。

*Release Notes*： link:/release-notes/microsoft-dynamics-ax-2012-connector-release-notes[Microsoft Dynamics AX 2012连接器发行说明]

*Samples*： link:_attachments/dynamics-ax-2012-samples.zip[dynamics-ax-2012-samples.zip]

Microsoft Dynamics AX 2012连接器支持以下操作：

[%header%autowidth.spread]
|===
| {操作{1}}说明
| *Query table*  |针对应用程序对象树（AOT）表运行查询。有关更多信息，请参阅Microsoft link:https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]网站。
| *Static query*  |运行 link:https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。 +
| *Document Service*  |呼叫 link:https://technet.microsoft.com/EN-US/library/bb496530.aspx[AIF文件服务]。
|===

== 先决条件

运行Dynamics AX连接器之前必须满足以下先决条件：

* 安装 link:https://repository-master.mulesoft.org/nexus/content/repositories/releases/org/mule/modules/anypoint-windows-gateway-service/1.9.0/anypoint-windows-gateway-service-1.9.0.zip[Windows网关服务]。如果您打算单独使用此连接器，只需单击*Install*按钮即可完成向导，否则请查看其 link:/mule-user-guide/v/3.7/windows-gateway-services-guide[参考文件]以应用于其他连接器的设置。

用于Anypoint平台的===  Windows网关服务

调用Dynamics AX系统服务时， link:/mule-user-guide/v/3.7/windows-gateway-services-guide[Windows网关服务]执行协议转换。 Dynamics AX系统服务（元数据服务，查询服务）使用未在Java中实现的`net.tcp`协议。

要执行请求，连接器按照以下方式通过Windows网关服务路由请求：

. 连接器向Windows网关服务发送HTTP请求。
.  Windows网关服务收到HTTP请求。
.  Windows网关服务使用`net.tcp`协议执行针对Dynamics AX系统服务的请求。
.  Windows网关服务接收来自Dynamics AX系统服务的响应。
.  Windows网关服务通过HTTP将响应发送到连接器。
. 连接器接收到响应。

Anypoint Platform和Windows Gateway Services之间的所有通信均通过SSL进行身份验证和保护。

image:protocol-translation.png[协议翻译]

== 安装

在Anypoint Studio中安装Microsoft Dynamics AX 2012连接器：

. 在Anypoint Studio的*Help*菜单下，点击*Install New Software*。
. 从*Work with*下拉，点击`Anypoint Connectors Update Site`。
. 展开*Select*类别，然后点击*Microsoft Dynamics AX 2012 Connector*的复选框。点击*Next*。
. 查看您选择的项目的详细信息，然后点击*Next*。
. 选择*I accept the terms of the license agreement*并点击*Finish*。
. 点击*Restart Now*完成安装。
.  Studio重新启动后，展开*Connectors*调色板组，查看您最近添加的*Microsoft Dynamics AX 2012 Connector*。

== 入门

=== 第1步：创建一个新的Mule项目

打开*Anypoint Studio*并创建一个新项目：

. 从菜单中选择*File*> *New*> *Mule Project*。
. 在*New Mule Project*窗口中，输入*ax-demo*作为*Project Name*。
. 点击*Finish*。

=== 第2步：创建和配置新的Microsoft Dynamics AX全局元素

配置连接器的连接：

. 点击*Global Elements*标签。
. 点击*Create*，弹出*Global Type*对话框。
. 在*Search*文本框中输入*ax*。
. 选择*Microsoft Dynamics AX: Gateway Connection*并点击*OK*。
. 填写所需的参数：
+
[%header,cols="2*"]
|===
| {参数{1}}说明
| *Username*  |连接到Dynamics AX的用户名。
| *Password*  |连接到Dynamics AX的密码。
| *AOS Server Name*  |运行*Application Object Server*的服务器的名称或IP。
| *AOS Services WSDL Port*  |（1.1.0及更高版本）WSDL服务运行的端口号。默认端口号是`8101`。
| *Gateway Router Service Uri*  | *Windows Gateway Services*的地址（主机和端口）。如果您尚未更改 link:/mule-user-guide/v/3.7/windows-gateway-services-guide#configuring-dynamics-crm-ax-connector-settings[Windows网关服务]路由服务配置，则此地址通常类似于`https://[server_with_windows_gateway_services].com:9333/router`（请参阅<<Prerequisites>>），否则使用您选择的端口。
| *AOS Services Endpoint Port (Optional)*  |（1.1.0及更高版本）使用此配置来覆盖Services的WSDL文档中指定的服务端点。
| *Connection timeout (Optional)* |使用此设置配置与*Windows Gateway Services*建立连接时要使用的超时。如果要配置无限超时，请将其设置为零（值以毫秒为单位）。
| *Reception timeout (Optional)* |使用此设置配置通过*Windows Gateway Services*发送/接收数据时要使用的超时。如果要配置无限超时，请将其设置为零（值以毫秒为单位）。
|===
+
. 点击*Test Connection*以确保连接正常工作。
. 连接成功后，点击*OK*。

=== 第3步：创建查询Dynamics AX的流程

创建一个Mule流来查询"ProjTable"。

image:query-table-flow.png[查询表流]

要创建Mule流，请按照下列步骤操作：

. 点击*Message Flow*标签。
. 搜索*http*并将*HTTP*连接器拖动到画布上。这创建了一个新的流程。
. 搜索*ax*，然后将*HTTP*连接器旁边的*Microsoft Dynamics AX 2012*连接器拖动到*Process*区域。
. 搜索*json*，然后将*Object to JSON*变压器拖到*Microsoft Dynamics AX 2012*旁边。
. 双击*HTTP*连接器。点击*Connector Configuration*列表旁边的加号（*+*）。
. 在*HTTP Listener Configuration*窗口中，确保*Protocol*设置为*HTTP*，*Host*设置为*All Interfaces [0.0.0.0] (Default)*，*Port*为设为*8081*。点击*OK*。
. 在*Basic Settings*下，将*Path*设置为*/query*。
. 双击*Microsoft Dynamics AX 2012*并更新以下配置值：
.. 从*Connector Configuration*列表中选择先前创建的*Microsoft Dynamics AX 2012  Connector*配置。
.. 从*Operation*列表中选择*Query table*。
.. 从*Language*列表中点击*DataSense Query Language*。
.. 点击*Query Builder…*
.. 从*Types*列表中选择*ProjTable*。
.. 从*Fields*列表中选择*ProjId*和*ProjGroupId*。
.. 从*Order By*列表中选择*ProjId*。
.. 从*Direction*列表中选择*DESCENDING*。
+
image:query-table-config.png[查询表配置]
+
. 点击*OK*。

=== 第4步：运行流程

. 在*Package Explorer*中，右键单击*demo-ax*，然后选择*Run As*> *Mule Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+

[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'ax-demo'                                    +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.DeploymentDirectoryWatcher:
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Mule is up and kicking (every 5000ms)                     +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[main] org.mule.module.launcher.StartupSummaryDeploymentListener:
**********************************************************************
*              - - + DOMAIN + - -               * - - + STATUS + - - *
**********************************************************************
* default                                       * DEPLOYED           *
**********************************************************************
 
*************************************************************************************
* - - + APPLICATION + - -            *       - - + DOMAIN + - -      * - - + STATUS *
*************************************************************************************
* ax-demo                          * default                       * DEPLOYED       *
*************************************************************************************
----

. 打开Internet浏览器并访问http：// localhost：8081 / query
. 按降序排列的帐户列表应以JSON格式返回（结果因您的AX实例而异）。
+
[source, code]
----
[{"ProjId":"DAT-000009","ProjGroupId":"Group-2"},{"ProjId":"DAT-000008","ProjGroupId":"Group-1"},{"ProjId":"DAT-000007","ProjGroupId":"Group-0"}]
----

== 用例示例

=== 开始演示

. 在Studio中导入项目文件夹。
. 更新`/src/main/app/mule-app.properties`中的Microsoft Dynamics AX连接参数。
. 点击*Test Connection*以确保连接正常工作。
. 运行应用程序。

=== 运行演示

演示包括以下操作：

* 查询*ProjTable*表中的所有项目：+
  `http://localhost:8081/projects`
* 列出所有项目（静态查询*ProjListProjectTable*）：+
  `http://localhost:8081/list-projects`
* 通过ProjId获取项目（静态查询*ProjListProjectTable*）：`http://localhost:8081/list-projects?ProjId={projid}`

==  Datasense

当入站/出站端口未通过net.tcp适配器配置时，它们的元数据不会被检索，因此它们不会通过Datasense显示。另外，未在AOS内部署的net.tcp服务也未显示。

== 操作

=== 查询表

在 link:https://msdn.microsoft.com/EN-US/library/bb314725.aspx[AOT表]上运行查询。

=== 静态查询

运行 link:https://msdn.microsoft.com/en-us/library/bb394994.aspx[AOT静态查询]。

==== 静态查询输入

下表详细说明了操作的输入参数。

[%header,cols="2*"]
|===
| {参数{1}}说明
| staticQueryName  |要执行的静态查询的名称。
| fetchSize  |分页结果的页面大小。
| _消息负载_  |对于接受输入参数的静态查询，使用参数名称和值的`Map<String, Object>`。
|===

==== 静态查询输出

包含静态查询结果的列表。

=== 文档服务

拨打 link:https://technet.microsoft.com/EN-US/library/bb496530.aspx[AIF文件服务]。

==== 文档服务输入

下表详细说明了操作的输入参数。

[%header%autowidth.spread]
|===
| {参数{1}}说明
| serviceAndSoapActionUri  |文档服务名称和SOAP操作URI，连接格式为：+
`_service-name soapActionUri_`
| _消息有效载荷_  |发送到操作的XML文档。
|===

==== 输出

调用文档服务操作的结果。

== 故障处理

如果在通过连接器执行AX操作时发生错误，根据问题的性质，您可以执行多个步骤。

=== 超时

如果在使用连接器执行任何操作时收到超时，则应正确设置上述连接器设置表（<<Step 2: Create and Configure a New Microsoft Dynamics AX Global Element>>）中描述的`Connection timeout`和`Reception timeout`参数。除了连接器的超时设置之外，您还应该在*Windows Gateway Services*（谁负责将您的请求路由到AX服务器）时检查/设置超时。有关更多信息，请参阅 link:/mule-user-guide/v/3.7/windows-gateway-services-guide#ax-specific[Windows网关服务]参考文档。

=== 其他问题

对于其他问题，建议在Windows网关服务参考文档中查看 link:/mule-user-guide/v/3.7/windows-gateway-services-guide#windows-gateway-service-troubleshooting[故障排除]部分。如果您怀疑问题可能与正在执行的操作的响应负载有关，则可以增加*message size*相关设置（ link:/mule-user-guide/v/3.7/windows-gateway-services-guide#ax-specific[AX配置]）。此外，在该部分中，有许多关于跟踪/调试的有用技巧，可以让您了解可能导致问题的原因。

== 另请参阅

*  link:https://www.microsoft.com/en-us/dynamics/erp-ax-overview.aspx[Microsoft Dynamic AX站点]
*  link:/mule-user-guide/v/3.7/windows-gateway-services-guide[Windows网关服务]
